# maminals

./: .gitignore  README.md  __init__.py  animal_data.py  audio_generator.py  cache.py  config.py  flake.nix  image_handler.py  main.py  performance.py  pyproject.toml  utils.py  video_creator.py  whatsapp_sender.py
